--- a/styles/components/Header.module.css
+++ b/styles/components/Header.module.css
@@ -18,7 +18,7 @@
 
 .nav a {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   flex-grow: 1;
 }
